# lite-webviewer

./: .gitignore  CLAUDE.md  README.md  build.sh  check.sh  decode_filenames.py  full-text-search-design-single-node.md  full-text-search-design.md  kg-agent实施路线图与评审报告.md  pom.xml  start-dev.sh  system-design-document.md  test-xinjiang.md  test_search_parser.java
backend/: pom.xml
data/: index.json  index.toon  nexus_db.mv.db  nexus_db.trace.db
docs/: Web预览系统产品设计.md  sample.csv  专业前景分析.html  (+2 more)
kg-agent/: .env.example  .gitignore  README.md  check_docker_services.sh  demo.py  docker-compose.dev.yml  docker-compose.prod.yml  kg-agent实施跟踪与下一步工作计划.md  kg_api_server.py  pyproject.toml  requirements.txt  run.py  start_all_services.sh  下一步实施设计与计划.md  代码分析与实施报告.md
kg-agent/elasticsearch/demo/: README.md  full_text_search.py  start.sh  test_enhanced_search.py  web_ui.pid
kg-agent/elasticsearch/demo/docker/: Dockerfile.elasticsearch  docker-compose.yml
kg-agent/elasticsearch/demo/scripts/: init-ik.sh  start_elasticsearch_with_ik.sh
kg-agent/elasticsearch/demo/tests/: test_elasticsearch.py  test_full_text_search.py  test_ik_analyzer.py
kg-agent/elasticsearch/demo/web/: search_web.py  search_web_ui.py
kg-agent/nubula/: SUMMARY.md  USAGE.md
kg-agent/nubula/demo/: README.md  api.pid  package-lock.json  package.json  requirements.txt  start.sh  test_report.json
kg-agent/nubula/demo/docker/: docker-compose.yml
kg-agent/nubula/demo/scripts/: init_nebula.sh
kg-agent/nubula/demo/src/domain/: advanced_graph_operations.py  graph_operations.py
kg-agent/nubula/demo/src/infrastructure/: nebula_client.py
kg-agent/nubula/demo/src/interfaces/: api.py
kg-agent/nubula/demo/tests/e2e/: performance_test.py  run_all_tests.py
kg-agent/nubula/demo/tests/integration/: consistency_test.py  test_api.py
kg-agent/nubula/demo/tests/unit/: test_indexes.py  test_lookup.py  test_lookup_all.py  test_multi_stmt.py  test_nebula_direct.py  test_path.py
kg-agent/nubula/demo/web/: graph-visualization.js  index.html
kg-agent/src/backend/: config.py  config_backup.py  main.py
kg-agent/src/backend/app/: celery_app.py  config.py  error_handlers.py  exceptions.py  main.py
kg-agent/src/backend/app/api/: __init__.py  admin.py  kg.py  search.py
kg-agent/src/backend/app/infrastructure/: elasticsearch.py  milvus.py  nebula.py
kg-agent/src/backend/app/models/: __init__.py  document.py  graph.py  search.py  task.py
kg-agent/src/backend/app/services/: __init__.py  document_service.py  embedding_service.py  graph_service.py  kg_service.py  search_service.py  storage_manager.py
kg-agent/src/backend/app/tasks/: __init__.py  document.py  index.py
kg-agent/src/backend/app/utils/: __init__.py  cache_manager.py  file_handler.py  health_checker.py  logger.py  text_processor.py
kg-agent/static/: graph_visualization.html
kg-agent/templates/: index.html
kg-agent/tests/integration/docker/: base.py  conftest.py  test_api.py  test_api_server.py  test_data_generators.py  test_functional.py  test_graph_api.py  test_health_checks.py  test_nebula_console_v5.sh  test_performance.py
kg-agent/tests/unit/: test_document_service.py  test_kg_service.py
(+199 files in other folders)
