[tool.poetry]
name = "kg-agent"
version = "0.1.0"
description = "Knowledge Graph Enhanced Retrieval Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
celery = {extras = ["redis"], version = "^5.3.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.0"
elasticsearch = "^8.12.0"
pymilvus = "^2.3.0"
nebula3-python = "^3.6.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
flasgger = "^0.9.7.1"
cors = "^1.0.1"

# NLP and ML dependencies
transformers = "^4.36.0"
torch = "^2.1.0"
sentencepiece = "^0.1.99"
protobuf = "^4.25.0"
jieba = "^0.42.1"
paddlepaddle = {version = "^2.5.0", optional = true}
paddlenlp = {version = "^2.6.0", optional = true}

# File processing
pypdf2 = "^3.0.0"
python-docx = "^1.1.0"
markdown = "^3.5.0"
openpyxl = "^3.1.2"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.2.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
requests = "^2.31.0"

[tool.poetry.extras]
paddle = ["paddlepaddle", "paddlenlp"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/backend --cov-report=term-missing"